# Module-3-DevSecOps-Example

./: Dockerfile  main.py  pyproject.toml
.github/workflows/: sast.yml  secrets.yml  trivy_scanning.yml
