[tool.poetry]
name = "minimal-devsecops-example"
version = "0.1.0"
description = "Minimal DevSecOps example to show how security could be integrated into the workflow"
authors = ["Florian Angermeir <florian.angermeir@tum.de>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "minimal_devsecops_example"}]

[tool.poetry.dependencies]
python = "^3.11.0"
Flask = "^3.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
